# mapelia

./: .gitignore  asc.py  asc2ply  codemeta.json  contributing.md  contributing.rst  guapelia  guapelia.py  mapelia  maps.py  paper.md  pintelia  pintelia.py  poligoniza  projections.c  projections.py  projections.pyx  pyproject.toml  readme.md  readme.rst  setup.py  smooth  smooth.py  stl-split  tests.py
examples/: tests.py
mapelia/: asc.py  formats.py  maps.py  poligoniza.py  projections.py  projections.pyx  scripts.py
paper/: paper.bib  paper.md
