[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mapelia"
description = "Generation of 3D models from maps"
version = "1.3.0"
authors = [
  { name="Amelia Ortiz-Gil", email="amelia.ortiz@uv.es" },
  { name="Jordi Burguet-Castell", email="jordi.burguet.castell@gmail.com" },
]
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = ["numpy", "pillow"]

[project.urls]
"Homepage" = "https://github.com/jordibc/mapelia"

[project.scripts]
mapelia = "mapelia:main"
guapelia = "guapelia:main"
pintelia = "pintelia:main"
poligoniza = "poligoniza:main"
stl-split = "stl_split:main"
smooth = "smooth:main"

[project.optional-dependencies]
cython = ["cython"]
