[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mapelia"
description = "Generation of 3D models from maps"
version = "1.3.0"
authors = [
  { name="Amelia Ortiz-Gil", email="amelia.ortiz@uv.es" },
  { name="Jordi Burguet-Castell", email="jordi.burguet.castell@gmail.com" },
]
readme = "readme.md"
license = { file="license.md" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = ["numpy", "pillow"]

[project.urls]
"Homepage" = "https://github.com/jordibc/mapelia"

[project.scripts]
mapelia = "mapelia.scripts:main_mapelia"
guapelia = "mapelia.scripts:main_guapelia"
pintelia = "mapelia.scripts:main_pintelia"
poligoniza = "mapelia.scripts:main_poligoniza"
stl-split = "mapelia.scripts:main_stl_split"
smooth = "mapelia.scripts:main_smooth"

[project.optional-dependencies]
cython = ["cython", "setuptools"]
